# ha-boneco

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml
custom_components/boneco/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  fan.py  humidifier.py  manifest.json  models.py  number.py  quality_scale.yaml  select.py  sensor.py  strings.json  switch.py
custom_components/boneco/translations/: en.json  ru.json
